add: logic Post

--- a/client/src/components/PreviewPost/index.module.scss
+++ b/client/src/components/PreviewPost/index.module.scss
@@ -7,16 +7,28 @@
   font-size: 30px;
   font-weight: 200;
   margin: 0;
+  text-align: center;
 }
 
 .previewpost__date {
   font-size: 14px;
   font-weight: 200;
   margin: 0;
-  padding: 20px 0 0 0;
+  padding: 10px 0 20px 0;
+  text-align: center;
 }
 
 .previewpost__description {
+  margin: 0;
   font-size: 20px;
   font-weight: 500;
+}
+
+.previewpost__link {
+  text-decoration: none;
+  color: #cdd9e5;
+}
+
+.previewpost__link:hover {
+  opacity: .7;
 }
