--- a/client/src/components/Posts/index.module.scss
+++ b/client/src/components/Posts/index.module.scss
@@ -1,7 +1,7 @@
 .posts {
-  padding: 40px 300px 0;
+  padding: 40px 0;
   display: flex;
   flex-direction: column;
   gap: 40px;
-  text-align: center;
+
 }
