--- a/client/src/styles/globals.scss
+++ b/client/src/styles/globals.scss
@@ -1,8 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@400;500;700&display=swap');
 
 body {
   background-color: #2d333b;
-  font-family: 'Manrope', sans-serif;
+  font-family: 'Comfortaa', sans-serif;
   font-weight: 400;
   color: #cdd9e5;
 }
